--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,13 +1,13 @@
+[workspace]
+members = ["apps/*", "editor", "game/*"]
+
 [package]
-name = "bevy_game" # ToDo
+name = "bevy_game"                               # ToDo
 version = "0.1.0"
 publish = false
-authors = ["Niklas Eicker <git@nikl.me>"] # ToDo: you are the author ;)
+authors = ["Sean Sullivan <me@snen.dev>"]        # ToDo: you are the author ;)
 edition = "2021"
 exclude = ["dist", "build", "assets", "credits"]
-
-[workspace]
-members = ["mobile"]
 
 [profile.dev.package."*"]
 opt-level = 3
@@ -32,13 +32,16 @@ codegen-units = 1
 strip = true
 
 [features]
-dev = [
-    "bevy/dynamic_linking",
-]
+dev = ["bevy/dynamic_linking"]
 
+[dependencies]
+# workspace crates
+bevy_game_controls = { path = "game/controls" }
+bevy_game_gameplay = { path = "game/gameplay" }
+bevy_game_flavor = { path = "game/flavor" }
+# bevy
 # All of Bevy's default features exept for the audio related ones (bevy_audio, vorbis), since they clash with bevy_kira_audio
 #   and android_shared_stdcxx, since that is covered in `mobile`
-[dependencies]
 bevy = { version = "0.12", default-features = false, features = [
     "animation",
     "bevy_asset",
@@ -61,8 +64,10 @@ bevy = { version = "0.12", default-features = false, features = [
     "default_font",
     "webgl2",
 ] }
+# bevy utilities
 bevy_kira_audio = { version = "0.18" }
 bevy_asset_loader = { version = "0.19" }
+# miscellanous
 rand = { version = "0.8.3" }
 webbrowser = { version = "0.8", features = ["hardened"] }
 
