--- a/apps/mobile/manifest.yaml
+++ b/apps/mobile/manifest.yaml
@@ -5,7 +5,7 @@ android:
   #  - "../assets/*"
   icon: "ios-src/Assets.xcassets/AppIcon.appiconset/icon_1024x1024.png"
   manifest:
-    package: "smen.dev.bevygame" # Todo
+    package: "snen.dev.bevygame" # Todo
     version_code: 3 # Todo you should start at 1
     application:
       label: "Bevy game" # Todo
