--- a/editor/Cargo.toml
+++ b/editor/Cargo.toml
@@ -7,5 +7,6 @@ edition = "2021"
 bevy_game = { path = ".." }
 bevy = "0.12"
 bevy_editor_pls = { version = "0.7" }
+clap = { version = "*", features = ["derive"] }
 pretty-type-name = "1.0"
 indexmap = "2.1"
